--- a/style/style.css
+++ b/style/style.css
@@ -25,6 +25,7 @@ h1{
     font-size: 50px;
     font-family: 'Roboto', sans-serif;
     margin-left: 40px;
+    margin-top: 40px;
 }
 
 h2{
@@ -33,6 +34,26 @@ h2{
     font-size: 30px;
 }
 
+.banner{
+    width: 100%;
+    height: 350px;
+    margin-top: 20px;
+}
+
+
+.banner-img{
+    width: 100%;
+    height: 350px;
+}
+
+h3{
+    font-family: 'Roboto', sans-serif ;
+    text-align: center;
+    font-size: 30px;
+    margin: 20px;
+}
+
+
 header{
     font-size: 30px;
     list-style: none;
@@ -40,10 +61,10 @@ header{
 
 .border{
     border-radius: 30px;
-    margin: 30px 0px 20px 30px;
     width: 500px;
     height: 500px;
-
+    margin: 30px 0px 0px 30px;
+    
 }
 
 iframe{
@@ -54,6 +75,13 @@ iframe{
 
 footer{
     margin-left: 45%;
+    bottom: 0px;
+}
+
+.mapa{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
@@ -61,11 +89,13 @@ footer{
     list-style-type: none;
     display: flex;
     justify-content: space-around;
+    margin-bottom: 50px;
+
 }
 
 .logowp{
     position: sticky;
-    bottom: 20px;
+    bottom: 0px;
     margin-left: 96%;
     margin-bottom: 20px;
 }
@@ -75,18 +105,24 @@ form{
 }
 
 .logos{
-    margin: 100px 100px 100px 1000px;
+    margin-left: 40%;
     
 }
 
 .grid{
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 25% 25% 25% 25%;
+}
+
+.grid-index{
     display: grid;
     grid-template-columns: 33% 33% 33%;
     grid-template-rows: 33% 33% 33%;
 }
 
 p{
-    margin-left: 200px;
+    margin-left: 15%;
 }
 
 .nosotros{
@@ -95,9 +131,88 @@ p{
     font-size: 20px;
 }
 
+@media (max-width:2100px){
+    .border{
+        width: 380px;
+        height: 380px;
+    }
+}
+
+
+@media (max-width:1600px){
+    .grid-index{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 25% 25% 25% 25%;
+        
+    }
+
+    .grid{
+        display: grid;
+        grid-template-columns: 33% 33% 33%;
+        grid-template-rows: 25% 25% 25% 25%;
+    }
+
+    .border{ 
+        width: 400px;
+        height: 400px;
+    }
+    
+    .logowp{
+        position: sticky;
+        margin-top: 0%;
+    }
+    
+    footer{
+        margin-top: 30%;
+    }
+}
 
 
 
+@media (max-width:1250px){
+    .flex-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 50px;
+    }
+
+    .grid{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 13% 13% 13% 13% 13% 13% 13% 13% 13% 13%;
+    }
+
+    .border{ 
+        width: 300px;
+        height: 300px;
+    }
+
+
+    footer{
+        margin-top: 40%;
+    }
+}
+
+@media (max-width:630px){
+    .grid-index{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+        }
+
+        .grid{
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8%;
+        }
+
+        .border{
+            margin: 50px 0px 0px 30px;
+        }
+}
+    
 
 
 
