--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -1,5 +1,11 @@
+.Formulario{
+    margin-right: 40%;
+    margin-left: 20px;
+}
+
 .mapa{
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
