--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -1,14 +1,9 @@
 @import "fuentes";
-@import "generales";
-@import "nav";
-@import "titulo";
-@import "banner";
-@import "img";
-@import "form";
-@import "bs";
-@import "texto";
 @import "layout";
-@import "footer";
-@import "mapa";
-@import "logo";
+@import "bs";
+@import "generales";
+@import "index";
+@import "contacto";
+@import "productos";
+@import "nosotros";
 @import "mediaQ";
