--- a/sass/_bs.scss
+++ b/sass/_bs.scss
@@ -8,3 +8,15 @@
         color: black;
     }
 }
+
+.navbar-active{
+    text-decoration: none;
+}
+
+
+.carru{
+    width: 60%;
+    height: 50%;
+    margin-left: 20%;
+    margin-top: 5%;
+}
