--- a/sass/_mediaQ.scss
+++ b/sass/_mediaQ.scss
@@ -3,6 +3,12 @@
         width: 380px;
         height: 380px;
     }
+
+    .logowp{
+        position: sticky;
+        margin-top: 0%;
+        margin-left: 94%;
+    }
 }
 
 
@@ -52,6 +58,7 @@
         grid-template-rows: 13% 13% 13% 13% 13% 13% 13% 13% 13% 13%;
     }
 
+
     .border{ 
         width: 300px;
         height: 300px;
@@ -64,9 +71,24 @@
 
     .logowp{
         position: sticky;
-        margin-left: 90%;
+        margin-left: 84%;
     }
 }
+
+@media (max-width:700px){
+
+    .border{ 
+        width: 270px;
+        height: 270px;
+    }
+
+    .logowp{
+        position: sticky;
+        margin-left: 80%;
+    }
+}
+
+
 
 @media (max-width:630px){
     .grid-index{
@@ -83,6 +105,8 @@
 
         .border{
             margin: 50px 0px 0px 30px;
+            width: 400px;
+            height: 400px;
         }
         .logowp{
             position: sticky;
