--- a/sass/_generales.scss
+++ b/sass/_generales.scss
@@ -46,7 +46,8 @@ header{
 .border{
     @include sizes(500px,500px);
     border-radius: 30px;
-    margin: 30px 0px 0px 30px;
+    margin-left: 10%;
+    margin-top: 60px;
     
 }
 
@@ -54,4 +55,11 @@ footer{
     display: flex;
     justify-content: center;
     margin-bottom: 0px;
+    margin-top: 50px;
+    background-color: rgb(193, 169, 141);
+    padding: 100px;
 }
+
+
+
+
