--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -34,7 +34,8 @@ h3{
 
 .text-p{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-left: 20%;
+    margin-left: 28%;
+    margin-top: 20px;
 }
   
 
