--- a/style/estilos.css
+++ b/style/estilos.css
@@ -29,6 +29,17 @@
   color: black;
 }
 
+.navbar-active {
+  text-decoration: none;
+}
+
+.carru {
+  width: 60%;
+  height: 50%;
+  margin-left: 20%;
+  margin-top: 5%;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -67,13 +78,17 @@ header {
   height: 500px;
   width: 500px;
   border-radius: 30px;
-  margin: 30px 0px 0px 30px;
+  margin-left: 10%;
+  margin-top: 60px;
 }
 
 footer {
   display: flex;
   justify-content: center;
   margin-bottom: 0px;
+  margin-top: 50px;
+  background-color: rgb(193, 169, 141);
+  padding: 100px;
 }
 
 .banner-img {
@@ -110,7 +125,8 @@ h3 {
 
 .text-p {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  margin-left: 20%;
+  margin-left: 28%;
+  margin-top: 20px;
 }
 
 .Formulario {
@@ -125,7 +141,7 @@ h3 {
 }
 
 p {
-  margin-left: 30%;
+  margin-left: 35%;
 }
 
 .nosotros {
@@ -138,6 +154,12 @@ p {
   .border {
     width: 380px;
     height: 380px;
+  }
+  .logowp {
+    position: -webkit-sticky;
+    position: sticky;
+    margin-top: 0%;
+    margin-left: 94%;
   }
 }
 @media (max-width: 1600px) {
@@ -187,7 +209,18 @@ p {
   .logowp {
     position: -webkit-sticky;
     position: sticky;
-    margin-left: 90%;
+    margin-left: 84%;
+  }
+}
+@media (max-width: 700px) {
+  .border {
+    width: 270px;
+    height: 270px;
+  }
+  .logowp {
+    position: -webkit-sticky;
+    position: sticky;
+    margin-left: 80%;
   }
 }
 @media (max-width: 630px) {
@@ -203,6 +236,8 @@ p {
   }
   .border {
     margin: 50px 0px 0px 30px;
+    width: 400px;
+    height: 400px;
   }
   .logowp {
     position: -webkit-sticky;
